1. 新增左侧菜单栏 2. 实现应用和菜单的核心框架 3. 增强数据管理与查看能力